# kiokufux

./: .gitignore  README.md  pyproject.toml
fotofux/: cli.py  config.py  embeddings.py  hashing.py  search.py  sidecar.py
kiokufux/: _np.py  autotagging.py  catalog.py  cli.py  config.py  default_tags.py  embeddings.py  face_review.py  faces.py  gallery.py  metadata.py  models.py  prompts.py  rotation.py  scanner.py  search.py  sidecar.py  thumbnails.py  vlm.py
kiokufux/templates/gallery/: gallery.js  index.html  style.css
tests/: test_autotagging.py  test_catalog.py  test_cli.py  test_config.py  test_embeddings.py  test_faces.py  test_gallery.py  test_hashing.py  test_search.py  test_sidecar.py  test_vlm.py
